--- a/hello.html
+++ b/hello.html
@@ -16,6 +16,10 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
+
+		<div>
+			<p>Petite présentation</p>
+		</div>
 		
 	
 </body></html>
