--- a/hello.html
+++ b/hello.html
@@ -17,9 +17,16 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 
+		<!-- description -->
 		<div>
-			<p>Petite présentation</p>
+			<h1>Ma description</h1>
+			<p>Petite présentation : Stagiaire kickstartweb</p>
 		</div>
 		
+		<!-- récompense -->
+		<div>
+			<h1>Ma récompenses</h1>
+			<p>en construction...</p>
+		</div>
 	
 </body></html>
