--- a/hello.html
+++ b/hello.html
@@ -28,5 +28,32 @@
 			<h1>Ma récompenses</h1>
 			<p>en construction...</p>
 		</div>
+
+		<div id="color-block-description">
+            <div class="single-color-block-description">
+              <div class="single-color-block rouge"></div>
+			  	<p class="single-color-block-description__copy">
+					spectacles repris dans l’abonnement
+				</p>
+            </div>
+            <div class="single-color-block-description">
+              <div class="single-color-block vert"></div>
+			  	<p class="single-color-block-description__copy">
+					Programmation Hors Cadre
+				</p>
+            </div>
+            <div class="single-color-block-description">
+              <div class="single-color-block orange"></div>
+			  	<p class="single-color-block-description__copy">
+					Cerises sur la saison
+				</p>
+            </div>
+            <div class="single-color-block-description">
+              <div class="single-color-block mauve"></div>
+			  	<p class="single-color-block-description__copy">
+					Plaisirs Dits-Vins
+				</p>
+            </div>
+		</div>
 	
 </body></html>
