ajout des médailles

--- a/hello.html
+++ b/hello.html
@@ -26,7 +26,8 @@
 		<!-- récompense -->
 		<div>
 			<h1>Ma récompenses</h1>
-			<p>en construction...</p>
+			<p> Ajout d'une nouvelle médaille : bronze</p>
+			<p> Ajout d'une nouvelle médaille : argent</p>
 		</div>
 
 		<div id="color-block-description">
