ajout commande git pull

--- a/hello.html
+++ b/hello.html
@@ -30,6 +30,12 @@
 			<p> Ajout d'une nouvelle médaille : argent</p>
 		</div>
 
+		<!-- commandes -->
+		<div>
+			<h1>Mes commandes git</h1>
+			<p>git pull</p>
+		</div>
+
 		<div id="color-block-description">
             <div class="single-color-block-description">
               <div class="single-color-block rouge"></div>
