--- a/hello.html
+++ b/hello.html
@@ -28,6 +28,7 @@
 			<h1>Ma récompenses</h1>
 			<p> Ajout d'une nouvelle médaille : bronze</p>
 			<p> Ajout d'une nouvelle médaille : argent</p>
+			<p> Ajout d'une nouvelle médaille : or</p>
 		</div>
 
 		<!-- commandes -->
